--- a/apps/Makefile
+++ b/apps/Makefile
@@ -15,8 +15,8 @@ KRB5_INCLUDES=
 LIBKRB5=
 
 PEX_LIBS=
-EX_LIBS= 
-EXE_EXT= 
+EX_LIBS=
+EXE_EXT=
 
 SHLIB_TARGET=
 
@@ -91,7 +91,7 @@ req: sreq.o $(A_OBJ) $(DLIBCRYPTO)
 		LIBDEPS="$(PEX_LIBS) $(LIBCRYPTO) $(EX_LIBS)" \
 		link_app.$${shlib_target}
 
-sreq.o: req.c 
+sreq.o: req.c
 	$(CC) -c $(INCLUDES) $(CFLAG) -o sreq.o req.c
 
 openssl-vms.cnf: openssl.cnf
@@ -135,7 +135,7 @@ update: openssl-vms.cnf local_depend
 depend: local_depend
 	@if [ -z "$(THIS)" ]; then $(MAKE) -f $(TOP)/Makefile reflect THIS=$@; fi
 local_depend:
-	@[ -z "$(THIS)" ] || $(MAKEDEPEND) -- $(CFLAG) $(INCLUDES) $(DEPFLAG) -- $(PROGS) $(SRC)
+	@[ -z "$(THIS)" ] || $(MAKEDEPEND) -- $(CFLAG) $(INCLUDES) $(DEPFLAG) -- $(PROGS) $(SRC);
 
 dclean:
 	$(PERL) -pe 'if (/^# DO NOT DELETE THIS LINE/) {print; exit(0);}' $(MAKEFILE) >Makefile.new
